--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
             text-align: center;
            
         }
+        form{
+            text-align: center; color: black;
+            background-color: gray;
+            padding: 5%;
+            width: 20%;
+            margin: 0 auto;
+        }
+        h2{
+            text-align: center; color: white;
+        }
     </style>
 </head>
 <body id="body"> 
