--- a/login.html
+++ b/login.html
@@ -13,23 +13,28 @@
             background-size:cover ;
             text-align: center;
         }
+        form{
+            text-align: center; color: black;
+            background-color: gray;
+            padding: 5%;
+            width: 20%;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
    <form>
-    <label>Full Name</label>
+    <h1>LOGIN</h1>
     <input type="text" placeholder="Joyce Nyambura"/> 
     <br>
     <br>
-    <label>Email Address</label>
     <input type="text" placeholder="nyambura@gmail.com"/>
     <br>
     <br>
-    <label>Password</label>
     <input type="password" value="hidden"/>
     <br>
     <br>
-    <button type="submit"><a href="tables.html">Login</a></button>
+    <button type="submit"><a href="tables.html">submit</a></button>
     <br></br>
 You don't have an account?<a href="index.html">Signin</a>
    </form> 
