--- a/tables.html
+++ b/tables.html
@@ -11,6 +11,7 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size:cover ;
+            text-align: center;
         }
         table,th,td{
             border:solid;
@@ -18,6 +19,7 @@
             border-color: blue;
             border-style: solid;
             width: 50%; height: 70%;
+            margin: auto;
         }
     </style>
 </head>
